# voting

./: .gitignore  Dockerfile  Dockerfile.db  README.md  docker-compose.yml  go.mod  mongo-init.js  nginx.conf  voting.code-workspace
.github/workflows/: container-push.yml
admin/: go.mod  main.go
admin/static/: index.html  main.js  styles.css
ballot/: go.mod  go.sum  main.go
ballot/static/: index.html  main.js  styles.css  thankyou.html
common/: common.go  go.mod
registration/: go.mod  go.sum  main.go
registration/static/: index.html  main.js  styles.css
voting-setup/: Cargo.toml
voting-setup/src/: main.rs
