[package]
name = "voting-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
libsums = { git = "https://github.com/HackSocNotts/libsums.git", version = "0.5.0" }
mongodb = "2.8.2"
tokio = { version = "1.36.0", features = ["full"] }
